# HT_Engine

./: LICENSE  README.md
引擎/: .gitignore  LICENSE  README_CN.md  README_EN.md  blender_realistic_scene.py  check_mcp_port.py  complex_modeling.py  engine_config.json  main.py  performance_test.py  pyproject.toml  requirements.txt  setup.py  start_engine.py  test_glb_import.py
引擎/Engine/: Engine.py  Logger.py  __init__.py
引擎/Engine/Assets/: MaterialFactory.py  ModelImporter.py
引擎/Engine/Assets/BlenderIntegration/: BlenderExporter.py  BlenderImporter.py  BlenderOptimizer.py  LowEndModeling.py  LowEndRenderingGuide.md  LowPolyLandscapeGenerator.py  README.md
引擎/Engine/Core/: __init__.py
引擎/Engine/MCP/: __init__.py  api_server.py  mcp_server.py  modeling_api.py
引擎/Engine/Math/: CythonMath.c  CythonMath.cp312-win_amd64.pyd.backup  CythonMath.pyx  Math.py  QuaternionFix.py  __init__.py  asm_math.asm  asm_math.c  asm_math.h  setup.py
引擎/Engine/Physics/: Cloth.py  DestructibleObject.py  Fluid.py  PhysicsSystem.py  Vehicle.py
引擎/Engine/Platform/: Platform.py  Platform.py.backup
引擎/Engine/Renderer/: LandscapePreviewRenderer.py  Renderer.py
引擎/Engine/Scene/: Camera.py  CameraController.py  Light.py  SceneManager.py  SceneNode.py
引擎/Engine/Shaders/: BasicFragmentShader.glsl  BasicVertexShader.glsl  OptimizedAdvancedShader.glsl
引擎/Engine/UI/: CameraController.py  Event.py  MainWindow.py  MenuBar.py  StatusBar.py  ToolBar.py  UIManager.py  Viewport.py
引擎/Engine/Utils/: Benchmark.py  ComprehensiveTester.py  PerformanceMonitor.py  QualityValidator.py  __init__.py
(+58 files in other folders)
